--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,17 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               J. Z. Downs
+tagline:             'Computational Mathematics'
+description:         'A place for code projects, math, and visualizations.'
+url:                 https://jacobdowns.github.io/
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jacob Downs
+  email:             jacob.downs@umontana.edu
 
 # Custom vars
 version:             1.0.0
