--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 
 # Setup
 title:               J. Z. Downs
-tagline:             'Computational Mathematics'
+tagline:             'Computational Mathematician'
 description:         'A place for code projects, math, and visualizations.'
 url:                 https://jacobdowns.github.io/
 baseurl:             ''
