--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 #permalink:           pretty
-permalink:            /
+permalink:            /:categories/:year/:month/:day/:title:output_ext
 
 # Setup
 title:               J. Z. Downs
