--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-#permalink:           pretty
-permalink:            /:categories/:year/:month/:day/:title:output_ext
-
-
+permalink:           pretty
 
 # Setup
 title:               J. Z. Downs
@@ -12,9 +9,7 @@ tagline:             'Computational Mathematician'
 description:         'A place for code projects, math, and visualizations.'
 url:                 https://jacobdowns.github.io/
 baseurl:             ''
-gems:                [jekyll-paginate]
 paginate:            5
-paginate_path:       "page:num"
 
 # About/contact
 author:
